cabal-version:      2.4
name:               biscuit-wai
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Clément Delafargue
maintainer:         clement@delafargue.name

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable twain-example
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      biscuit-wai,
                      biscuit-haskell,
                      twain,
                      warp
    hs-source-dirs:   app
    default-language: Haskell2010

library
  exposed-modules:
      Auth.Biscuit.Wai
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
    base                 >= 4.7 && <5,
    bytestring,
    biscuit-haskell      ^>= 0.2.1,
    http-types,
    twain,
    vault,
    wai
  default-language: Haskell2010
